--- a/student.html
+++ b/student.html
@@ -649,8 +649,10 @@
                 }
 
                 const formData = new FormData();
-                formData.append('file', audioBlob, 'audio.wav');
+                formData.append('file', audioBlob, 'recording.wav');
                 formData.append('model', 'whisper-1');
+                formData.append('language', 'en');  // 영어로 고정
+                formData.append('response_format', 'json');  // JSON 응답 형식 지정
 
                 const response = await fetch('https://api.openai.com/v1/audio/transcriptions', {
                     method: 'POST',
