--- a/student.html
+++ b/student.html
@@ -723,7 +723,7 @@
                         'Authorization': `Bearer ${apiKey}`
                     },
                     body: JSON.stringify({
-                        model: 'gpt-4o',
+                        model: 'gpt-4o-audio-preview',
                         messages: messages,
                         max_tokens: 150,
                         temperature: 0.7
