--- a/student.html
+++ b/student.html
@@ -654,10 +654,10 @@
                 formData.append('language', 'en');
                 formData.append('response_format', 'json');
 
-                // 재시도 로직 추가
+                // 재시도 로직 개선
                 let retryCount = 0;
                 const maxRetries = 3;
-                const retryDelay = 1000; // 1초
+                const baseDelay = 2000; // 기본 2초
 
                 while (retryCount < maxRetries) {
                     try {
@@ -673,9 +673,12 @@
                             // Rate limit에 도달한 경우
                             retryCount++;
                             if (retryCount < maxRetries) {
-                                showStatus('info', `API 요청 제한에 도달했습니다. ${retryCount}초 후 재시도합니다...`);
-                                await new Promise(resolve => setTimeout(resolve, retryDelay * retryCount));
+                                const delay = baseDelay * Math.pow(2, retryCount - 1); // 지수 백오프
+                                showStatus('info', `API 요청 제한에 도달했습니다. ${delay/1000}초 후 재시도합니다... (${retryCount}/${maxRetries})`);
+                                await new Promise(resolve => setTimeout(resolve, delay));
                                 continue;
+                            } else {
+                                throw new Error('API 요청 제한에 계속 도달했습니다. 잠시 후 다시 시도해주세요.');
                             }
                         }
 
@@ -690,7 +693,8 @@
                             throw error;
                         }
                         retryCount++;
-                        await new Promise(resolve => setTimeout(resolve, retryDelay * retryCount));
+                        const delay = baseDelay * Math.pow(2, retryCount - 1);
+                        await new Promise(resolve => setTimeout(resolve, delay));
                     }
                 }
             } catch (error) {
