--- a/student.html
+++ b/student.html
@@ -656,12 +656,12 @@
 
                 // 재시도 로직 개선
                 let retryCount = 0;
-                const maxRetries = 3;
-                const baseDelay = 2000; // 기본 2초
+                const maxRetries = 2;
+                const baseDelay = 5000;
 
                 while (retryCount < maxRetries) {
                     try {
-                        const response = await fetch('https://api.openai.com/v1/audio/transcriptions', {
+                        const response = await fetch('/api/whisper', {
                             method: 'POST',
                             headers: {
                                 'Authorization': `Bearer ${apiKey}`
@@ -670,15 +670,25 @@
                         });
 
                         if (response.status === 429) {
-                            // Rate limit에 도달한 경우
                             retryCount++;
                             if (retryCount < maxRetries) {
-                                const delay = baseDelay * Math.pow(2, retryCount - 1); // 지수 백오프
-                                showStatus('info', `API 요청 제한에 도달했습니다. ${delay/1000}초 후 재시도합니다... (${retryCount}/${maxRetries})`);
+                                const delay = baseDelay * Math.pow(2, retryCount - 1);
+                                showStatus('info', `API 요청 제한에 도달했습니다. 잠시 후 다시 시도합니다... (${delay/1000}초 대기 중)`);
+                                
+                                const startTime = Date.now();
+                                const updateInterval = setInterval(() => {
+                                    const elapsed = Math.floor((Date.now() - startTime) / 1000);
+                                    const remaining = Math.max(0, Math.floor(delay/1000 - elapsed));
+                                    if (remaining > 0) {
+                                        showStatus('info', `API 요청 제한에 도달했습니다. ${remaining}초 후 재시도합니다...`);
+                                    }
+                                }, 1000);
+
                                 await new Promise(resolve => setTimeout(resolve, delay));
+                                clearInterval(updateInterval);
                                 continue;
                             } else {
-                                throw new Error('API 요청 제한에 계속 도달했습니다. 잠시 후 다시 시도해주세요.');
+                                throw new Error('API 요청 제한에 계속 도달했습니다. 잠시 후 다시 시도해주세요. (약 1-2분 후)');
                             }
                         }
 
